adding css for displaystock

--- a/css/common.css
+++ b/css/common.css
@@ -14,3 +14,14 @@ nav a:link{
 nav a:visited{
   color: white;
 }
+
+/* css for the table in displaystock.php */
+.adress {
+  max-width : 150px;
+  white-space : nowrap;
+  overflow : hidden;
+}
+
+.adress:hover {
+  max-width : initial;
+}
