--- a/css/common.css
+++ b/css/common.css
@@ -18,10 +18,12 @@ nav a:visited{
 /* css for the table in displaystock.php */
 .stock {
   max-width : 150px;
+  max-height: 150px;
   white-space : nowrap;
   overflow : hidden;
 }
 
 .stock:hover {
   max-width : initial;
+  max-height: initial;
 }
