--- a/css/common.css
+++ b/css/common.css
@@ -4,6 +4,7 @@ html{
 body{
   background-color: navy;
   color: cyan;
+  margin: 170px 5px 50px;
 }
 header{
   text-align: center;
@@ -14,7 +15,7 @@ header{
 }
 nav{
   left: 0px;
-  top: 0px;
+  top: 120px;
   height: 50px;
   position: fixed;
 }
