--- a/css/common.css
+++ b/css/common.css
@@ -12,6 +12,7 @@ header{
   text-align: center;
   left: 0px;
   top: 0px;
+  width: 100%;
   height: 60px;
   position: fixed;
 }
@@ -19,6 +20,7 @@ header{
 nav{
   left: 0px;
   top: 60px;
+  width: 100%;
   height: 30px;
   position: fixed;
 }
@@ -49,8 +51,9 @@ td:hover {
 
 footer {
   text-align: center;
-  position: fixed;
   left: 0px;
   bottom: 0px;
+  width: 100%;
   height: 40px;
+  position: fixed;
 }
