--- a/css/common.css
+++ b/css/common.css
@@ -15,6 +15,7 @@ header{
   width: 100%;
   height: 55px;
   position: fixed;
+  background-color: navy;
 }
 
 nav{
@@ -23,6 +24,7 @@ nav{
   width: 100%;
   height: 30px;
   position: fixed;
+  background-color: navy;
 }
 
 nav a:hover{
@@ -56,4 +58,5 @@ footer {
   width: 100%;
   height: 40px;
   position: fixed;
+  background-color: navy;
 }
