--- a/css/common.css
+++ b/css/common.css
@@ -5,7 +5,7 @@ html{
 body{
   background-color: navy;
   color: cyan;
-  margin: 100px 5px 60px;
+  margin: 90px 5px 40px;
 }
 
 header{
@@ -13,9 +13,9 @@ header{
   left: 0px;
   top: 0px;
   width: 100%;
-  height: 55px;
+  height: 60px;
   position: fixed;
-  background-color: navy;
+  background-color: black;
 }
 
 nav{
@@ -24,7 +24,7 @@ nav{
   width: 100%;
   height: 30px;
   position: fixed;
-  background-color: navy;
+  background-color: black;
 }
 
 nav a:hover{
@@ -58,5 +58,5 @@ footer {
   width: 100%;
   height: 40px;
   position: fixed;
-  background-color: navy;
+  background-color: black;
 }
