--- a/css/common.css
+++ b/css/common.css
@@ -61,7 +61,7 @@ footer {
   background-color: black;
 }
 
-.btn {
+.button {
   background: #3498db;
   background-image: -webkit-linear-gradient(top, #3498db, #2980b9);
   background-image: -moz-linear-gradient(top, #3498db, #2980b9);
@@ -78,7 +78,7 @@ footer {
   text-decoration: none;
 }
 
-.btn:hover {
+.button:hover {
   background: #3cb0fd;
   background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
   background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
