--- a/css/common.css
+++ b/css/common.css
@@ -50,7 +50,7 @@ nav a:hover{
   background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
   background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
   background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
- /* text-decoration: none; */
+ text-decoration: none; 
 }
 
 nav a:link{
