--- a/css/common.css
+++ b/css/common.css
@@ -60,7 +60,7 @@ footer {
   position: fixed;
   background-color: black;
 }
-
+/*
 .button {
   background: #3498db;
   background-image: -webkit-linear-gradient(top, #3498db, #2980b9);
@@ -87,3 +87,4 @@ footer {
   background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
   text-decoration: none;
 }
+*/
