--- a/css/materialize.css
+++ b/css/materialize.css
@@ -2892,6 +2892,16 @@ table {
   width: 100%;
   display: table;
 }
+td {
+  max-width : 100px;
+  white-space : nowrap;
+  overflow : hidden;
+  text-overflow: ellipsis;
+}
+td:hover {
+  max-width : initial;
+}
+
 
 table.bordered > thead > tr,
 table.bordered > tbody > tr {
