--- a/css/edit_stock_levels.css
+++ b/css/edit_stock_levels.css
@@ -1,6 +1,10 @@
 .TR {
   background-color: lime;
+  display: table-row;
+  padding: 2px;
 }
 .TC {
   background-color: lightskyblue;
+  display: table-cell;
+  margin: 2px;
 }
