--- a/css/common.css
+++ b/css/common.css
@@ -6,6 +6,7 @@ body{
   background-color: navy;
   color: cyan;
   margin: 100px 5px 40px;
+  margin-bottom:50px;
 }
 
 header{
@@ -44,13 +45,13 @@ td:hover {
 }
 
 footer {
-  text-align: center;
-  left: 0px;
-  bottom: 0px;
-  width: 100%;
-  height: 40px;
-  position: fixed;
-  background-color: black;
+    position:fixed;
+    height:50px;
+    background-color:black;
+    bottom:0px;
+    left:0px;
+    right:0px;
+    margin-bottom:0px;
 }
 /*
 .button {
