--- a/css/materialize.css
+++ b/css/materialize.css
@@ -3,6 +3,16 @@
  * Copyright 2014-2015 Materialize
  * MIT License (https://raw.githubusercontent.com/Dogfalo/materialize/master/LICENSE)
  */
+footer {
+    position:fixed;
+    height:50px;
+    background-color:black;
+    bottom:0px;
+    left:0px;
+    right:0px;
+    margin-bottom:0px;
+}
+
 .materialize-red {
   background-color: #e51c23 !important;
 }
