--- a/css/materialize.css
+++ b/css/materialize.css
@@ -2868,8 +2868,9 @@ ul.staggered-list li {
 .page-footer {
   padding-top: 20px;
   background-color: #ee6e73;
-  position:fixed;
-  bottom:0px;
+  position: absolute;
+  bottom: 0px;
+  width: 100%;
 }
 
 .page-footer .footer-copyright {
