--- a/css/materialize.css
+++ b/css/materialize.css
@@ -2868,7 +2868,7 @@ ul.staggered-list li {
 .page-footer {
   padding-top: 20px;
   background-color: #ee6e73;
-  position: absolute;
+  position: fixed;
   bottom: 0px;
   width: 100%;
 }
