--- a/css/common.css
+++ b/css/common.css
@@ -1,83 +1,9 @@
-html{
-  background-color: black;
-}
+  body {
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+  }
 
-body{
-  background-color: navy;
-  color: cyan;
-  margin: 100px 5px 40px;
-  margin-bottom:50px;
-}
-
-header{
-  text-align: center;
-  left: 0px;
-  top: 0px;
-  width: 100%;
-  height: 60px;
-  position: fixed;
-  background-color: black;
-}
-
-nav{
-  left: 0px;
-  top: 60px;
-  width: 100%;
-  height: 35px;
-  position: fixed;
-  background-color: black;
-}
-
-nav a:hover{
-  color: yellow;
-}
-
-nav a:link{
-  color: pink;
-}
-
-nav a:visited{
-  color: white;
-}
-
-td:hover {
-  max-width : initial;
-}
-
-footer {
-    position:fixed;
-    height:50px;
-    background-color:black;
-    bottom:0px;
-    left:0px;
-    right:0px;
-    margin-bottom:0px;
-}
-/*
-.button {
-  background: #3498db;
-  background-image: -webkit-linear-gradient(top, #3498db, #2980b9);
-  background-image: -moz-linear-gradient(top, #3498db, #2980b9);
-  background-image: -ms-linear-gradient(top, #3498db, #2980b9);
-  background-image: -o-linear-gradient(top, #3498db, #2980b9);
-  background-image: linear-gradient(to bottom, #3498db, #2980b9);
-  -webkit-border-radius: 28;
-  -moz-border-radius: 28;
-  border-radius: 28px;
-  font-family: Arial;
-  color: #ffffff;
-  font-size: 20px;
-  padding: 10px 20px 10px 20px;
-  text-decoration: none;
-}
-
-.button:hover {
-  background: #3cb0fd;
-  background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
-  background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
-  background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
-  background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
-  background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
-  text-decoration: none;
-}
-*/
+  main {
+    flex: 1 0 auto;
+  }
