--- a/css/materialize.css
+++ b/css/materialize.css
@@ -2687,6 +2687,7 @@ video.responsive-video {
 .pagination li.disabled a {
   cursor: default;
   color: #999;
+  pointer-events:none !important;
 }
 
 .pagination li i {
